# Pokemon-Gen3

./: .pre-commit-config.yaml  CHANGELOG.md  build.py  pyproject.toml
bootstrap/database/: __init__.py  __main__.py  form_names.sql  forms.sql  nature.sql  nature_names.sql  natures.sql  pokemon.sql  pokemon_bases.py  pokemon_bases.sql  pokemon_name_en.json  pokemon_names.sql  stat.sql  stats.sql
pokemon_gen3/: .gitignore  __init__.py  _pokemon.py  _stat.py  _types.py  utils.py
pokemon_gen3/database/: __init__.py  _connection.py  _types.py  form.py  nature.py  pokemon.py  pokemons.sql  stat.py  stats.sql
tests/: test_nature.py  test_pokemon.py  test_stat.py  test_stat_calcuration.py
