[tool.poetry]
name = "Pokemon-Gen3"
version = "0.0.0a0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pytest = "^7.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
types-setuptools = "^57.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = '.venv'
