[tool.poetry]
name = "Pokemon-Gen3"
version = "0.0.0a2"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
include = ["**/*.db"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^23"
mypy = "^0.931"
numpy = "^1.20"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.0.1"
types-setuptools = "^57.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = '.venv'

[tool.mypy]
exclude = [
    "^build/",
]
