[tool.poetry]
name = "Pokemon-Gen3"
version = "0.0.0a2"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
include = ["**/*.db"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^23"
isort = "^5"
mypy = "^1"
pyproject-flake8 = "^5"
types-setuptools = "^57.4.11"

[tool.poetry.group.test.dependencies]
numpy = "^1.20"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = '.venv'

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
exclude = [
    "^build/",
]
